fixed feed images, star rating disabled for viewers, view post image sized well, fixed overflow of text in description and comment area for post viewing

--- a/eggstagram/src/css/maincomponent.css
+++ b/eggstagram/src/css/maincomponent.css
@@ -66,3 +66,7 @@ body::before {
 .newsletter-text {
     color: white;
 }
+
+.title-text {
+    color: #2774AE;
+}
